Jupyter Notebook on how to access data

--- a/2019_HS_Challenge_ExplorativeAnalysis/Import_Data.ipynb
+++ b/2019_HS_Challenge_ExplorativeAnalysis/Import_Data.ipynb
@@ -35,9 +35,9 @@
     "DB_NAME = \"bank_db\"\n",
     "DB_SCHEMA = \"\"\n",
     "DB_ADMIN_USER = \"db_admin\" \n",
-    "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\"\n",
-    "DB_USER = \"bank_user\" \n",
-    "DB_PASSWORD = \"bank_pw\" \n",
+    "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\" \n",
+    "DB_USER = \"db_user\" \n",
+    "DB_PASSWORD = \"db_user_pw\"\n",
     "DB_USER_GRANTS = \"SELECT\" #\"SELECT, INSERT, UPDATE, DELETE\"\n",
     "\n",
     "zip_file = \"data.zip\"\n",
@@ -285,7 +285,7 @@
       "Handle field 'disp.type' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS disp\n",
       "Execute CREATE TABLE IF NOT EXISTS disp (disp_id INT PRIMARY KEY NOT NULL,client_id INT,account_id INT,type TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'client'\n",
       "Handle field 'client.client_id'.\n",
       "Handle field 'client.birth_number'.\n",
@@ -295,7 +295,7 @@
       "Handle field 'client.district_id' being of type 'int64'.\n",
       "Execute DROP TABLE IF EXISTS client\n",
       "Execute CREATE TABLE IF NOT EXISTS client (client_id INT PRIMARY KEY NOT NULL,birth_number INT,district_id INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n"
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
      ]
     },
     {
@@ -335,7 +335,7 @@
       "Handle field 'trans.account' being of type 'float64'.\n",
       "Execute DROP TABLE IF EXISTS trans\n",
       "Execute CREATE TABLE IF NOT EXISTS trans (trans_id INT PRIMARY KEY NOT NULL,account_id INT,date DATE,type TEXT,operation TEXT,amount FLOAT,balance FLOAT,k_symbol TEXT,bank TEXT,account FLOAT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'district'\n",
       "Handle field 'district.a1'.\n",
       "Handle field 'district.a2'.\n",
@@ -375,7 +375,7 @@
       "Handle field 'district.a16' being of type 'int64'.\n",
       "Execute DROP TABLE IF EXISTS district\n",
       "Execute CREATE TABLE IF NOT EXISTS district (a1 INT PRIMARY KEY NOT NULL,a2 TEXT,a3 TEXT,a4 INT,a5 INT,a6 INT,a7 INT,a8 INT,a9 INT,a10 FLOAT,a11 INT,a12 FLOAT,a13 FLOAT,a14 INT,a15 FLOAT,a16 INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'orders'\n",
       "Handle field 'orders.order_id'.\n",
       "Handle field 'orders.account_id'.\n",
@@ -391,7 +391,7 @@
       "Handle field 'orders.k_symbol' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS orders\n",
       "Execute CREATE TABLE IF NOT EXISTS orders (order_id INT PRIMARY KEY NOT NULL,account_id INT,bank_to TEXT,account_to INT,amount FLOAT,k_symbol TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'account'\n",
       "Handle field 'account.account_id'.\n",
       "Handle field 'account.district_id'.\n",
@@ -405,7 +405,7 @@
       "Handle field 'account.date' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS account\n",
       "Execute CREATE TABLE IF NOT EXISTS account (account_id INT PRIMARY KEY NOT NULL,district_id INT,frequency TEXT,date DATE)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'loan'\n",
       "Handle field 'loan.loan_id'.\n",
       "Handle field 'loan.account_id'.\n",
@@ -425,7 +425,7 @@
       "Handle field 'loan.status' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS loan\n",
       "Execute CREATE TABLE IF NOT EXISTS loan (loan_id INT PRIMARY KEY NOT NULL,account_id INT,date DATE,amount FLOAT,duration INT,payments FLOAT,status TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'card'\n",
       "Handle field 'card.card_id'.\n",
       "Handle field 'card.disp_id'.\n",
@@ -439,7 +439,7 @@
       "Handle field 'card.issued' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS card\n",
       "Execute CREATE TABLE IF NOT EXISTS card (card_id INT PRIMARY KEY NOT NULL,disp_id INT,type TEXT,issued DATE)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n"
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
      ]
     }
    ],
