--- a/2019_HS_Projekt_WarenkorbAnalyse/Import_Data.ipynb
+++ b/2019_HS_Projekt_WarenkorbAnalyse/Import_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
     "DB_SCHEMA = \"\"\n",
     "DB_ADMIN_USER = \"db_admin\" \n",
     "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\"\n",
-    "DB_USER = \"warenkorb_user\" \n",
-    "DB_PASSWORD = \"warenkorb_pw\" \n",
+    "DB_USER = \"db_user\" \n",
+    "DB_PASSWORD = \"db_user_pw\" \n",
     "DB_USER_GRANTS = \"SELECT\" #\"SELECT, INSERT, UPDATE, DELETE\"\n",
     "\n",
     "zip_file = \"data.zip\"\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,84 +251,52 @@
       "Handle field 'order_products_train.add_to_cart_order'.\n",
       "Handle field 'order_products_train.reordered'.\n",
       "Handle field 'order_products_train.order_id' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_train.product_id' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_train.add_to_cart_order' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_train.reordered' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Execute DROP TABLE IF EXISTS order_products_train\n",
       "Execute CREATE TABLE IF NOT EXISTS order_products_train (index INT PRIMARY KEY NOT NULL,order_id INT,product_id INT,add_to_cart_order INT,reordered INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'departments'\n",
       "Handle field 'departments.department_id'.\n",
       "Handle field 'departments.department'.\n",
       "Handle field 'departments.department_id' being of type 'int64'.\n",
-      "Columns before Index(['department_id', 'department'], dtype='object')\n",
-      "Columns after Index(['department'], dtype='object')\n",
       "Handle field 'departments.department' being of type 'object'.\n",
-      "Columns before Index(['department'], dtype='object')\n",
-      "Columns after Index(['department'], dtype='object')\n",
       "Execute DROP TABLE IF EXISTS departments\n",
       "Execute CREATE TABLE IF NOT EXISTS departments (department_id INT PRIMARY KEY NOT NULL,department TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'aisles'\n",
       "Handle field 'aisles.aisle_id'.\n",
       "Handle field 'aisles.aisle'.\n",
       "Handle field 'aisles.aisle_id' being of type 'int64'.\n",
-      "Columns before Index(['aisle_id', 'aisle'], dtype='object')\n",
-      "Columns after Index(['aisle'], dtype='object')\n",
       "Handle field 'aisles.aisle' being of type 'object'.\n",
-      "Columns before Index(['aisle'], dtype='object')\n",
-      "Columns after Index(['aisle'], dtype='object')\n",
       "Execute DROP TABLE IF EXISTS aisles\n",
       "Execute CREATE TABLE IF NOT EXISTS aisles (aisle_id INT PRIMARY KEY NOT NULL,aisle TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'products'\n",
       "Handle field 'products.product_id'.\n",
       "Handle field 'products.product_name'.\n",
       "Handle field 'products.aisle_id'.\n",
       "Handle field 'products.department_id'.\n",
       "Handle field 'products.product_id' being of type 'int64'.\n",
-      "Columns before Index(['product_id', 'product_name', 'aisle_id', 'department_id'], dtype='object')\n",
-      "Columns after Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
       "Handle field 'products.product_name' being of type 'object'.\n",
-      "Columns before Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
-      "Columns after Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
       "Handle field 'products.aisle_id' being of type 'int64'.\n",
-      "Columns before Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
-      "Columns after Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
       "Handle field 'products.department_id' being of type 'int64'.\n",
-      "Columns before Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
-      "Columns after Index(['product_name', 'aisle_id', 'department_id'], dtype='object')\n",
       "Execute DROP TABLE IF EXISTS products\n",
       "Execute CREATE TABLE IF NOT EXISTS products (product_id INT PRIMARY KEY NOT NULL,product_name TEXT,aisle_id INT,department_id INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'order_products_prior'\n",
       "Handle field 'order_products_prior.order_id'.\n",
       "Handle field 'order_products_prior.product_id'.\n",
       "Handle field 'order_products_prior.add_to_cart_order'.\n",
       "Handle field 'order_products_prior.reordered'.\n",
       "Handle field 'order_products_prior.order_id' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_prior.product_id' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_prior.add_to_cart_order' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Handle field 'order_products_prior.reordered' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
-      "Columns after Index(['order_id', 'product_id', 'add_to_cart_order', 'reordered'], dtype='object')\n",
       "Execute DROP TABLE IF EXISTS order_products_prior\n",
       "Execute CREATE TABLE IF NOT EXISTS order_products_prior (index INT PRIMARY KEY NOT NULL,order_id INT,product_id INT,add_to_cart_order INT,reordered INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'orders'\n",
       "Handle field 'orders.order_id'.\n",
       "Handle field 'orders.user_id'.\n",
@@ -338,57 +306,15 @@
       "Handle field 'orders.order_hour_of_day'.\n",
       "Handle field 'orders.days_since_prior_order'.\n",
       "Handle field 'orders.order_id' being of type 'int64'.\n",
-      "Columns before Index(['order_id', 'user_id', 'eval_set', 'order_number', 'order_dow',\n",
-      "       'order_hour_of_day', 'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.user_id' being of type 'int64'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.eval_set' being of type 'object'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.order_number' being of type 'int64'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.order_dow' being of type 'int64'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.order_hour_of_day' being of type 'int64'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Handle field 'orders.days_since_prior_order' being of type 'float64'.\n",
-      "Columns before Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
-      "Columns after Index(['user_id', 'eval_set', 'order_number', 'order_dow', 'order_hour_of_day',\n",
-      "       'days_since_prior_order'],\n",
-      "      dtype='object')\n",
       "Execute DROP TABLE IF EXISTS orders\n",
       "Execute CREATE TABLE IF NOT EXISTS orders (order_id INT PRIMARY KEY NOT NULL,user_id INT,eval_set TEXT,order_number INT,order_dow INT,order_hour_of_day INT,days_since_prior_order FLOAT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO warenkorb_user\n"
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
      ]
     }
    ],
