--- a/Import_Data.ipynb
+++ b/Import_Data.ipynb
@@ -36,8 +36,8 @@
     "DB_SCHEMA = \"\"\n",
     "DB_ADMIN_USER = \"db_admin\" \n",
     "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\"\n",
-    "DB_USER = \"bank_user\" \n",
-    "DB_PASSWORD = \"bank_pw\" \n",
+    "DB_USER = \"db_user\" \n",
+    "DB_PASSWORD = \"db_user_pw\" \n",
     "DB_USER_GRANTS = \"SELECT\" #\"SELECT, INSERT, UPDATE, DELETE\"\n",
     "\n",
     "zip_file = \"data.zip\"\n",
